--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ a {text-decoration: none; cursor: pointer;}
 .flow {padding: 1rem;}
 
 .site-wrapper {
-  padding: 1rem;
+  padding: 1.5rem;
 }
 
 /* HEADER */ 
@@ -66,6 +66,7 @@ a {text-decoration: none; cursor: pointer;}
 header {
   display: flex;
   flex-direction: column;
+  padding-bottom: 1rem;
   gap: 1rem;
   align-items: center;
   max-width: 500px;
@@ -100,11 +101,11 @@ header {
   padding-block: 5px;
 }
 
-.about {
+/* .about {
   padding: 1rem;
   text-align: left;
 
-}
+} */
 
 .about p {
   margin-top: 1rem;
@@ -166,6 +167,11 @@ main {
 }
 
 /* PROJECTS */
+
+.projects-section {
+  display: grid;
+  gap: 1rem
+}
 
 .switch-projects-buttons {
   display: flex;
